--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   h1{font-size:24pt; margin:0 0 8px 0; line-height:1.2}
   .subheader{font-size:18pt; margin:0 0 12px 0; font-weight:700}
   .section-title{font-size:13pt; margin:16px 0 8px 0; line-height:1.25; font-weight:800; letter-spacing:.5px; text-transform:uppercase}
-  .intro{font-size:11pt; line-height:1.3; color:#4a4949; margin:4px 0 14px 0}
+  .intro{font-size:11pt; line-height:1.5; color:#4a4949; margin:4px 0 14px 0}
 
   .progress{display:flex; gap:10px; margin:6px 0 16px 0}
   .dot{width:10px; height:10px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb}
@@ -36,10 +36,10 @@
 
   /* QUESTIONS */
   .q-item{padding:12px 0; border-top:1px solid #e5e7eb; display:grid; grid-template-columns: 26px 1fr; column-gap:6px; align-items:baseline}
-  .q-num{font-size:15px; font-weight:700; line-height:1.35; text-align:right; padding-top:0; color:#111}
+  .q-num{font-size:12px; font-weight:500; line-height:1.35; text-align:right; padding-top:0; color:#4a4949}
   .q-body{display:block}
-  .q-title{display:block; font-size:15px; font-weight:500; margin:0 0 3px 0; line-height:1.35}
-  .q-sub{display:block; font-size:14px; font-weight:500; margin:0 0 8px 0; color:#666; line-height:1.35}
+  .q-title{display:block; font-size:12px; font-weight:500; margin:0 0 3px 0; color:#4a4949;line-height:1.35}
+  .q-sub{display:block; font-size:15px; font-weight:500; margin:0 0 8px 0; color:#4a4949; line-height:1.35}
   .pill{display:inline-block; width:30px; height:30px; line-height:30px; text-align:center; border:1px solid #cfcfcf; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; font-size:16px}
   .pill.selected{background:var(--blue); color:#fff}
 
@@ -186,7 +186,7 @@
     <p class="intro">
       Read each statement and think how you normally act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know your own strengths and opportunities
     </p>
-    <br>
+    <br style="line-height:0.5;">
 
     <h2 class="section-title">HOW TO SCORE YOURSELF</h2>
     <ul class="scale-list" style="list-style:none; padding:0; margin:10px 0">
