--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
   /* QUESTIONS */
   .q-item{padding:12px 0; border-top:1px solid #e5e7eb; display:grid; grid-template-columns: 26px 1fr; column-gap:6px; align-items:baseline}
-  .q-num{font-size:14px; font-weight:500; line-height:1.35; text-align:right; padding-top:0; color:#4a4949}
+  .q-num{font-size:12px; font-weight:00; line-height:1.35; text-align:right; padding-top:0; color:#4a4949}
   .q-body{display:block}
-  .q-title{display:block; font-size:14px; font-weight:500; margin:0 0 3px 0; color:#4a4949;line-height:1.35}
-  .q-sub{display:block; font-size:14px; font-weight:500; margin:0 0 8px 0; color:#4a4949; line-height:1.35}
+  .q-title{display:block; font-size:15px; font-weight:500; margin:0 0 3px 0; line-height:1.35}
+  .q-sub{display:block; font-size:15px; font-weight:500; margin:0 0 8px 0; color:#4a4949; line-height:1.35}
   .pill{display:inline-block; width:30px; height:30px; line-height:30px; text-align:center; border:1px solid #cfcfcf; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; font-size:16px}
   .pill.selected{background:var(--blue); color:#fff}
 
