--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <body>
 <main class="container">
   <h1>BED HOSPITALITY 2.0</h1>
-  <p class="subheader">TEAM MEMBER FORM</p>
+  <p class="subheader">SELF-ASSESSMENT FORM</p>
   <div class="progress" id="progressHeader">
     <span class="dot"></span><span class="dot"></span><span class="dot"></span>
     <span class="dot"></span><span class="dot"></span><span class="dot"></span>
