--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   .intro{font-size:12pt; line-height:1.5; color:#333; margin:4px 0 14px 0}
 
   .progress{display:flex; gap:10px; margin:6px 0 16px 0}
-  .dot{width:14px; height:14px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb}
+  .dot{width:10px; height:10px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb}
   .dot.active{background:var(--progress-red); border-color:var(--progress-red)}
 
   .row{display:grid; grid-template-columns:minmax(84px, var(--label-w)) 1fr; column-gap:var(--gap); align-items:center; margin:10px 0}
-  .row>label{font-size:12pt; font-weight:400; white-space:normal; word-break:break-word}
+  .row>label{font-size:10pt; font-weight:400; white-space:normal; word-break:break-word}
   .row>input, .row>select{width:100%; padding:10px 12px; font-size:10pt; border:1px solid var(--gray-300); border-radius:10px; background:#fff; transition:box-shadow .15s, border-color .15s}
   .row>input:focus, .row>select:focus{outline:none; border-color:rgba(30,144,255,.8); box-shadow:0 0 0 3px rgba(30,144,255,.18); background:#fff}
   select:invalid{color:#aaa}
@@ -36,10 +36,30 @@
 
   /* QUESTIONS */
   .q-item{padding:12px 0; border-top:1px solid #e5e7eb; display:grid; grid-template-columns: 26px 1fr; column-gap:6px; align-items:baseline}
-  .q-num{font-size:15px; font-weight:700; line-height:1.35; text-align:right; padding-top:0; color:#111}
+  .q-num{
+  font-size:12pt;
+  font-weight:400;
+  line-height:1.5;
+  color:#333;
+  text-align:right;
+}
   .q-body{display:block}
-  .q-title{display:block; font-size:15px; font-weight:700; margin:0 0 3px 0; line-height:1.35}
-  .q-sub{display:block; font-size:14px; font-weight:400; margin:0 0 8px 0; color:#666; line-height:1.35}
+  .q-title{
+  display:block;
+  font-size:12pt;
+  font-weight:400;
+  margin:0 0 3px 0;
+  line-height:1.5;
+  color:#333;
+}
+  .q-sub{
+  display:block;
+  font-size:12pt;
+  font-weight:400;
+  margin:0 0 8px 0;
+  line-height:1.5;
+  color:#333;
+}
   .pill{display:inline-block; width:30px; height:30px; line-height:30px; text-align:center; border:1px solid #cfcfcf; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; font-size:16px}
   .pill.selected{background:var(--blue); color:#fff}
 
@@ -136,7 +156,7 @@
 <body>
 <main class="container">
   <h1>BED HOSPITALITY 2.0</h1>
-  <p class="subheader">SELF-ASSESSMENT FORM</p>
+  <p class="subheader">TEAM MEMBER FORM</p>
   <div class="progress" id="progressHeader">
     <span class="dot"></span><span class="dot"></span><span class="dot"></span>
     <span class="dot"></span><span class="dot"></span><span class="dot"></span>
