--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
   /* QUESTIONS */
   .q-item{padding:12px 0; border-top:1px solid #e5e7eb; display:grid; grid-template-columns: 26px 1fr; column-gap:6px; align-items:baseline}
   .q-num{
-  font-size:12pt;
-  font-weight:400;
-  line-height:1.5;
+  font-size:11pt;
+  font-weight:500;       /* medium weight */
+  line-height:1.4;
   color:#333;
   text-align:right;
 }
   .q-body{display:block}
   .q-title{
   display:block;
-  font-size:12pt;
-  font-weight:400;
+  font-size:11pt;
+  font-weight:500;       /* medium weight */
   margin:0 0 3px 0;
-  line-height:1.5;
+  line-height:1.4;
   color:#333;
 }
   .q-sub{
   display:block;
-  font-size:12pt;
-  font-weight:400;
+  font-size:11pt;
+  font-weight:400;       /* normal weight */
   margin:0 0 8px 0;
-  line-height:1.5;
+  line-height:1.4;
   color:#333;
 }
   .pill{display:inline-block; width:30px; height:30px; line-height:30px; text-align:center; border:1px solid #cfcfcf; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; font-size:16px}
