--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
   .dot.active{background:var(--progress-red); border-color:var(--progress-red)}
 
   .row{display:grid; grid-template-columns:minmax(84px, var(--label-w)) 1fr; column-gap:var(--gap); align-items:center; margin:10px 0}
-  .row>label{font-size:10pt; font-weight:400; white-space:normal; word-break:break-word}
+  .row>label{
+  font-size:11pt;
+  font-weight:400;
+  color:#333;
+  white-space:normal;
+  word-break:break-word;
+}
   .row>input, .row>select{width:100%; padding:10px 12px; font-size:10pt; border:1px solid var(--gray-300); border-radius:10px; background:#fff; transition:box-shadow .15s, border-color .15s}
   .row>input:focus, .row>select:focus{outline:none; border-color:rgba(30,144,255,.8); box-shadow:0 0 0 3px rgba(30,144,255,.18); background:#fff}
   select:invalid{color:#aaa}
@@ -82,6 +88,12 @@
      ========================= */
   #pdfReport{display:none}
   @media print{
+
+.row>label{
+  font-size:11pt;
+  font-weight:400;
+  color:#333;
+}
     body{background:#fff; color:#000}
     main, .modal-backdrop{display:none !important}
     #pdfReport{display:block; font-family:Arial, Helvetica, sans-serif; padding:18px 24px}
