--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
   h1{font-size:20pt; margin:0 0 8px 0; line-height:1.2}
   .subheader{font-size:18pt; margin:0 0 12px 0; font-weight:500}
   .section-title{font-size:13pt; margin:16px 0 8px 0; line-height:1.25; font-weight:800; letter-spacing:.5px; text-transform:uppercase}
-  .intro{font-size:12pt; line-height:1.5; color:#333; margin:4px 0 14px 0}
+  .intro{
+  font-size:11pt;
+  font-weight:400;
+  line-height:1.4;
+  color:#333;
+  margin:4px 0 14px 0;
+}
 
   .progress{display:flex; gap:10px; margin:6px 0 16px 0}
   .dot{width:10px; height:10px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb}
