--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
 }
 
   .progress{display:flex; gap:10px; margin:6px 0 16px 0}
-  .dot{width:10px; height:10px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb}
+  .dot{
+  width:14px;
+  height:14px;
+  border-radius:50%;
+  background:var(--progress-gray);
+  border:1px solid #e5e7eb;
+}
   .dot.active{background:var(--progress-red); border-color:var(--progress-red)}
 
   .row{display:grid; grid-template-columns:minmax(84px, var(--label-w)) 1fr; column-gap:var(--gap); align-items:center; margin:10px 0}
