--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   body{font-family:system-ui, Arial, sans-serif; background:#F9FAFB; color:var(--text); margin:0}
   .container{width:100%; margin:0; padding:24px var(--pad)}
 
-  h1{font-size:20pt; margin:0 0 8px 0; line-height:1.2}
+  .h1, h1 {
+  font-size:20pt;
+  margin:0 0 8px 0;
+  line-height:1.2;
+  font-weight:600;   /* updated to semi-bold */
+}
   .subheader{font-size:18pt; margin:0 0 12px 0; font-weight:500}
   .section-title{font-size:13pt; margin:16px 0 8px 0; line-height:1.25; font-weight:800; letter-spacing:.5px; text-transform:uppercase}
   .intro{
