--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
   font-weight:800;   /* updated to extra-bold */
   color:#333;        /* unified dark gray */
 }
-  .subheader{font-size:18pt; margin:0 0 12px 0; font-weight:500}
+  .subheader{
+  font-size:18pt;
+  font-weight:800;
+  color:#333;
+  margin:0 0 12px 0;
+}
   .section-title{font-size:13pt; margin:16px 0 8px 0; line-height:1.25; font-weight:800; letter-spacing:.5px; text-transform:uppercase}
   .intro{
   font-size:11pt;
