--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   body{font-family:system-ui, Arial, sans-serif; background:#F9FAFB; color:var(--text); margin:0}
   .container{width:100%; margin:0; padding:24px var(--pad)}
 
-  .h1, .h1, h1 {
+  .h1, .h1, .h1, h1 {
   font-size:20pt;
   margin:0 0 8px 0;
   line-height:1.2;
-  font-weight:800;   /* updated to extra-bold */
-  color:#333;        /* unified dark gray */
+  font-weight:1000;   /* updated to heavy weight */
+  color:#333;         /* unified dark gray */
 }
   .subheader{
   font-size:16pt;
