--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   body{font-family:system-ui, Arial, sans-serif; background:#F9FAFB; color:var(--text); margin:0}
   .container{width:100%; margin:0; padding:24px var(--pad)}
 
-  .h1, .h1, .h1, h1 {
+  .h1, .h1, h1 {
   font-size:20pt;
   margin:0 0 8px 0;
   line-height:1.2;
-  font-weight:1000;   /* updated to heavy weight */
-  color:#444;         /* unified dark gray */
+  font-weight:800;   /* updated to extra-bold */
+  color:#333;        /* unified dark gray */
 }
   .subheader{
   font-size:16pt;
   font-weight:800;
-  color:#444;
+  color:#333;
   margin:0 0 12px 0;
 }
   .section-title{font-size:13pt; margin:16px 0 8px 0; line-height:1.25; font-weight:800; letter-spacing:.5px; text-transform:uppercase}
@@ -33,7 +33,7 @@
   font-size:11pt;
   font-weight:400;
   line-height:1.4;
-  color:#444;
+  color:#333;
   margin:4px 0 14px 0;
 }
 
@@ -51,7 +51,7 @@
   .row>label{
   font-size:11pt;
   font-weight:400;
-  color:#444;
+  color:#333;
   white-space:normal;
   word-break:break-word;
 }
@@ -69,7 +69,7 @@
   font-size:11pt;
   font-weight:500;       /* medium weight */
   line-height:1.4;
-  color:#444;
+  color:#333;
   text-align:right;
 }
   .q-body{display:block}
@@ -79,7 +79,7 @@
   font-weight:500;       /* medium weight */
   margin:0 0 3px 0;
   line-height:1.4;
-  color:#444;
+  color:#333;
 }
   .q-sub{
   display:block;
@@ -87,7 +87,7 @@
   font-weight:400;       /* normal weight */
   margin:0 0 8px 0;
   line-height:1.4;
-  color:#444;
+  color:#333;
 }
   .pill{display:inline-block; width:30px; height:30px; line-height:30px; text-align:center; border:1px solid #cfcfcf; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; font-size:16px}
   .pill.selected{background:var(--blue); color:#fff}
@@ -96,7 +96,7 @@
   .score-kicker{font-size:14px; color:#666; margin:12px 0 8px 0}
   .score-big{font-size:32px; font-weight:800; margin:0 0 24px 0}
   .gauge{position:relative; height:28px; border-radius:999px; background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
-  .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#444}
+  .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#333}
 
   /* Congrats */
   .big-check{width:120px; height:120px; border-radius:60px; background:var(--blue); display:flex; align-items:center; justify-content:center; margin:16px auto}
@@ -115,7 +115,7 @@
 .row>label{
   font-size:11pt;
   font-weight:400;
-  color:#444;
+  color:#333;
 }
     body{background:#fff; color:#000}
     main, .modal-backdrop{display:none !important}
