--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
   color:#444;
   margin:0 0 12px 0;
 }
-  .section-title{
-  font-size:18pt;
-  font-weight:700;
-  color:#444;
-  margin:18px 0 10px 0;
-  line-height:1.25;
-}
+  .section-title{font-size:13pt; margin:16px 0 8px 0; line-height:1.25; font-weight:800; letter-spacing:.5px; text-transform:uppercase}
   .intro{
   font-size:11pt;
   font-weight:400;
