--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <div class="score-kicker">your self assessment results</div>
     <div class="score-big" id="scorePercent">OVERALL SCORE —%</div>
     <div class="gauge" id="gauge"></div>
-    <div class="rec-kicker">our suggestion and recommendation</div>
+    <div class="rec-kicker"><br>summary of your results<br></div>
     <div class="rec-text" id="recText">—</div>
 
     <div id="groupResultsContainer" style="margin-top:18px">
