--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   /* SCORE */
   .score-kicker{font-size:14px; color:#666; margin:12px 0 8px 0}
-  .score-big{font-size:32px; font-weight:800; margin:0 0 24px 0}
+  .score-big{font-size:20pt; font-weight:900; color:#444; margin:0 0 24px 0}
   .gauge{position:relative; height:28px; border-radius:999px; background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
   .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#444}
 
