--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>BED HOSPITALITY — Self-Assessment</title>
 <style>
   :root{
@@ -190,213 +191,201 @@
     .st-rating{width:12%}
     .st-title{font-weight:800}
   }
-</style>
 
+  .rec-text{
+    font-size:14pt;
+    font-weight:500;
+    color:#333;
+  }
+</style>
 <script id="embeddedQuestions" type="application/json">[]</script>
 </head>
 <body>
 <main class="container">
-  <h1>BED HOSPITALITY 2.0</h1>
-  <p class="subheader">TEAM MEMBER FORM</p>
-  <div class="progress" id="progressHeader">
-    <span class="dot"></span><span class="dot"></span><span class="dot"></span>
-    <span class="dot"></span><span class="dot"></span><span class="dot"></span>
-  </div>
-
-  <!-- PAGE 1 -->
-  <section id="welcome">
-    <h2 class="section-title">Your Information</h2>
-    <div class="row"><label for="nick">your name</label><input id="nick"/></div>
-    <div class="row"><label for="email">your email</label><input id="email" type="email"/></div>
-    <div class="row"><label for="hotel">your location</label>
-      <select id="hotel" required>
-        <option disabled selected value="">select hotel</option>
-        <option>BED Changkian</option>
-        <option>BED Phrasing</option>
-        <option>BED Nimman</option>
-        <option>BED Chiangmai Gate</option>
-        <option>BED Flying</option>
-        <option>BED Support</option>
-      </select>
-    </div>
-
-    <h2 class="section-title">Peer Information</h2>
-    <p class="intro">after you completed your self assessment one of your peers will review you. select one of your team members who worked in BED for at least 12 months</p>
-    <div class="row"><label for="peerName">name peer</label><input id="peerName"/></div>
-    <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email"/></div>
-    <div class="row"><label for="peerHotel">peer location</label>
-      <select id="peerHotel" required>
-        <option disabled selected value="">select hotel</option>
-        <option>BED Changkian</option>
-        <option>BED Phrasing</option>
-        <option>BED Nimman</option>
-        <option>BED Chiangmai Gate</option>
-        <option>BED Flying</option>
-        <option>BED Support</option>
-      </select>
-    </div>
-
-    <div class="actions">
-      <button id="toInstructions" disabled>Start</button>
-    </div>
-  </section>
-
-  <!-- Instructions -->
-  <section id="instructions" style="display:none">
-    <h2 class="section-title">HOW TO ASSESS YOURSELF</h2>
-    <p class="intro">
+<h1>BED HOSPITALITY 2.0</h1>
+<p class="subheader">TEAM MEMBER FORM</p>
+<div class="progress" id="progressHeader">
+<span class="dot"></span><span class="dot"></span><span class="dot"></span>
+<span class="dot"></span><span class="dot"></span><span class="dot"></span>
+</div>
+<!-- PAGE 1 -->
+<section id="welcome">
+<h2 class="section-title">Your Information</h2>
+<div class="row"><label for="nick">your name</label><input id="nick"/></div>
+<div class="row"><label for="email">your email</label><input id="email" type="email"/></div>
+<div class="row"><label for="hotel">your location</label>
+<select id="hotel" required="">
+<option disabled="" selected="" value="">select hotel</option>
+<option>BED Changkian</option>
+<option>BED Phrasing</option>
+<option>BED Nimman</option>
+<option>BED Chiangmai Gate</option>
+<option>BED Flying</option>
+<option>BED Support</option>
+</select>
+</div>
+<h2 class="section-title">Peer Information</h2>
+<p class="intro">after you completed your self assessment one of your peers will review you. select one of your team members who worked in BED for at least 12 months</p>
+<div class="row"><label for="peerName">name peer</label><input id="peerName"/></div>
+<div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email"/></div>
+<div class="row"><label for="peerHotel">peer location</label>
+<select id="peerHotel" required="">
+<option disabled="" selected="" value="">select hotel</option>
+<option>BED Changkian</option>
+<option>BED Phrasing</option>
+<option>BED Nimman</option>
+<option>BED Chiangmai Gate</option>
+<option>BED Flying</option>
+<option>BED Support</option>
+</select>
+</div>
+<div class="actions">
+<button disabled="" id="toInstructions">Start</button>
+</div>
+</section>
+<!-- Instructions -->
+<section id="instructions" style="display:none">
+<h2 class="section-title">HOW TO ASSESS YOURSELF</h2>
+<p class="intro">
       Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know your own strengths and opportunities
     </p>
-
-    <h2 class="section-title">HOW TO SCORE YOURSELF</h2>
-    <ul class="scale-list" style="list-style:none; padding:0; margin:10px 0">
-      <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">1</span> <span>I am not good at this</span></li>
-      <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">2</span> <span>I need to be better at this</span></li>
-      <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">3</span> <span>I am average at this</span></li>
-      <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">4</span> <span>I am good at this</span></li>
-      <li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">5</span> <span>I am very good at this</span></li>
-    </ul>
-    <div class="actions">
-      <button class="btn-secondary" id="backToWelcome">Back</button>
-      <button id="toQ1">Start</button>
-    </div>
-  </section>
-
-  <!-- Q1 -->
-  <section id="q1" style="display:none">
-    <div id="list-q1"></div>
-    <div class="actions">
-      <button class="btn-secondary" id="backToInstructions">Back</button>
-      <button id="toQ2">Next</button>
-    </div>
-  </section>
-
-  <!-- Q2 -->
-  <section id="q2" style="display:none">
-    <div id="list-q2"></div>
-    <div class="actions">
-      <button class="btn-secondary" id="backToQ1">Back</button>
-      <button id="submitAll">Next</button>
-    </div>
-  </section>
-
-  <!-- Score -->
-  <section id="finish" style="display:none">
-    <div class="score-kicker">your self assessment results</div>
-    <div class="score-big" id="scorePercent">OVERALL SCORE —%</div>
-    <div class="gauge" id="gauge"></div>
-    <div class="rec-kicker"><br>summary of your results<br></div>
-    <div class="rec-text" id="recText">—</div>
-
-    <div id="groupResultsContainer" style="margin-top:18px">
-      <div class="group-summary">
-        <div class="group-title" style="font-weight:700;margin-bottom:8px">Group Results</div>
-        <div id="groupResults"></div>
-      </div>
-    </div>
-
-    <div class="actions">
-      <button class="btn-secondary" id="backToQ2">Back</button>
-      <button id="nextToPeer">Next</button>
-    </div>
-  </section>
-
-  <!-- Congrats -->
-  <section id="congrats" style="display:none">
-    <div class="big-check"></div>
-    <div class="center">
-      <h3 style="font-size:28px; margin:8px 0 6px 0">Congratulations</h3>
-      <p style="font-size:18px; color:#374151">To download your complete test results please click PDF</p>
-    </div>
-    <div class="page-actions" style="display:flex; gap:14px; justify-content:space-between; padding-left:0; margin-top:10px">
-      <button class="btn-secondary btn-wide" id="congratsBack">Back</button>
-      <button class="btn-wide" id="congratsPdf">PDF</button>
-    </div>
-  </section>
+<h2 class="section-title">HOW TO SCORE YOURSELF</h2>
+<ul class="scale-list" style="list-style:none; padding:0; margin:10px 0">
+<li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">1</span> <span>I am not good at this</span></li>
+<li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">2</span> <span>I need to be better at this</span></li>
+<li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">3</span> <span>I am average at this</span></li>
+<li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">4</span> <span>I am good at this</span></li>
+<li class="scale-item" style="display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt"><span class="badge" style="width:28px; height:28px; border-radius:50%; background:var(--blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700">5</span> <span>I am very good at this</span></li>
+</ul>
+<div class="actions">
+<button class="btn-secondary" id="backToWelcome">Back</button>
+<button id="toQ1">Start</button>
+</div>
+</section>
+<!-- Q1 -->
+<section id="q1" style="display:none">
+<div id="list-q1"></div>
+<div class="actions">
+<button class="btn-secondary" id="backToInstructions">Back</button>
+<button id="toQ2">Next</button>
+</div>
+</section>
+<!-- Q2 -->
+<section id="q2" style="display:none">
+<div id="list-q2"></div>
+<div class="actions">
+<button class="btn-secondary" id="backToQ1">Back</button>
+<button id="submitAll">Next</button>
+</div>
+</section>
+<!-- Score -->
+<section id="finish" style="display:none">
+<div class="score-kicker">your self assessment results</div>
+<div class="score-big" id="scorePercent">OVERALL SCORE —%</div>
+<div class="gauge" id="gauge"></div>
+<div class="rec-kicker"><br/>summary of your results<br/></div>
+<div class="rec-text" id="recText">—</div>
+<div id="groupResultsContainer" style="margin-top:18px">
+<div class="group-summary">
+<div class="group-title" style="font-weight:700;margin-bottom:8px">Group Results</div>
+<div id="groupResults"></div>
+</div>
+</div>
+<div class="actions">
+<button class="btn-secondary" id="backToQ2">Back</button>
+<button id="nextToPeer">Next</button>
+</div>
+</section>
+<!-- Congrats -->
+<section id="congrats" style="display:none">
+<div class="big-check"></div>
+<div class="center">
+<h3 style="font-size:28px; margin:8px 0 6px 0">Congratulations</h3>
+<p style="font-size:18px; color:#374151">To download your complete test results please click PDF</p>
+</div>
+<div class="page-actions" style="display:flex; gap:14px; justify-content:space-between; padding-left:0; margin-top:10px">
+<button class="btn-secondary btn-wide" id="congratsBack">Back</button>
+<button class="btn-wide" id="congratsPdf">PDF</button>
+</div>
+</section>
 </main>
-
 <!-- Modal -->
 <div class="modal-backdrop" id="eligBackdrop" style="position:fixed; inset:0; background:rgba(0,0,0,.35); display:none; align-items:center; justify-content:center; z-index:50">
-  <div class="modal" style="width:min(92vw,520px); background:#fff; border-radius:18px; padding:20px; box-shadow:0 20px 60px rgba(0,0,0,.25)">
-    <h3 style="margin:0 0 10px 0; font-size:18px">Peer eligibility</h3>
-    <p style="margin:0 0 18px 0; font-size:16px; line-height:1.5; color:#222">Does your peer have at least 24 months of BED experience?</p>
-    <div class="row-btns" style="display:flex; justify-content:flex-end; gap:10px">
-      <button class="btn-secondary" id="eligCancel">Cancel</button>
-      <button id="eligOk">OK</button>
-    </div>
-  </div>
+<div class="modal" style="width:min(92vw,520px); background:#fff; border-radius:18px; padding:20px; box-shadow:0 20px 60px rgba(0,0,0,.25)">
+<h3 style="margin:0 0 10px 0; font-size:18px">Peer eligibility</h3>
+<p style="margin:0 0 18px 0; font-size:16px; line-height:1.5; color:#222">Does your peer have at least 24 months of BED experience?</p>
+<div class="row-btns" style="display:flex; justify-content:flex-end; gap:10px">
+<button class="btn-secondary" id="eligCancel">Cancel</button>
+<button id="eligOk">OK</button>
 </div>
-
+</div>
+</div>
 <!-- PRINT REPORT (Blue-branded) -->
-<section id="pdfReport" aria-hidden="true">
-  <div class="pdf-top">
-    <div>
-      <div class="pdf-title">BED HOSPITALITY 2.0</div>
-      <div class="pdf-sub">Self-Assessment Report</div>
-      <div class="pdf-date" id="pdfDate">Assessment Date —</div>
-    </div>
-    <div class="score-box">
-      <div class="label">TOTAL SCORE</div>
-      <div class="pct" id="pdfTotalPct">—%</div>
-      <div class="raw" id="pdfTotalRaw">— OUT OF 175</div>
-    </div>
-  </div>
-  <div class="pdf-divider"></div>
-
-  <div class="sec-h">INFORMATION</div>
-  <div class="info-grid">
-    <div>
-      <div class="sub-h">PERSONAL INFORMATION</div>
-      <div class="card fields">
-        <label>Employee name</label><div id="pdfEmpName"></div>
-        <label>Email address</label><div id="pdfEmpEmail"></div>
-        <label>Location</label><div id="pdfEmpHotel"></div>
-      </div>
-    </div>
-    <div>
-      <div class="sub-h">PEER INFORMATION</div>
-      <div class="card fields">
-        <label>Peer name</label><div id="pdfPeerName"></div>
-        <label>Email address</label><div id="pdfPeerEmail"></div>
-        <label>Location</label><div id="pdfPeerHotel"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="sec-h">ASSESSMENT</div>
-  <div class="card" style="padding:0">
-    <table>
-      <thead>
-        <tr>
-          <th>RESULTS BY GROUP</th>
-          <th>%</th>
-          <th>DESCRIPTION</th>
-        </tr>
-      </thead>
-      <tbody id="pdfGroupRows">
-        <!-- rows injected -->
-      </tbody>
-    </table>
-  </div>
-
-  <div class="sec-h">STATEMENTS</div>
-  <div class="card" style="padding:0">
-    <table id="pdfStatements">
-      <thead>
-        <tr>
-          <th class="st-no">NO.</th>
-          <th>STATEMENT</th>
-          <th class="st-group">GROUP</th>
-          <th class="st-rating">RATING</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- rows injected -->
-      </tbody>
-    </table>
-  </div>
+<section aria-hidden="true" id="pdfReport">
+<div class="pdf-top">
+<div>
+<div class="pdf-title">BED HOSPITALITY 2.0</div>
+<div class="pdf-sub">Self-Assessment Report</div>
+<div class="pdf-date" id="pdfDate">Assessment Date —</div>
+</div>
+<div class="score-box">
+<div class="label">TOTAL SCORE</div>
+<div class="pct" id="pdfTotalPct">—%</div>
+<div class="raw" id="pdfTotalRaw">— OUT OF 175</div>
+</div>
+</div>
+<div class="pdf-divider"></div>
+<div class="sec-h">INFORMATION</div>
+<div class="info-grid">
+<div>
+<div class="sub-h">PERSONAL INFORMATION</div>
+<div class="card fields">
+<label>Employee name</label><div id="pdfEmpName"></div>
+<label>Email address</label><div id="pdfEmpEmail"></div>
+<label>Location</label><div id="pdfEmpHotel"></div>
+</div>
+</div>
+<div>
+<div class="sub-h">PEER INFORMATION</div>
+<div class="card fields">
+<label>Peer name</label><div id="pdfPeerName"></div>
+<label>Email address</label><div id="pdfPeerEmail"></div>
+<label>Location</label><div id="pdfPeerHotel"></div>
+</div>
+</div>
+</div>
+<div class="sec-h">ASSESSMENT</div>
+<div class="card" style="padding:0">
+<table>
+<thead>
+<tr>
+<th>RESULTS BY GROUP</th>
+<th>%</th>
+<th>DESCRIPTION</th>
+</tr>
+</thead>
+<tbody id="pdfGroupRows">
+<!-- rows injected -->
+</tbody>
+</table>
+</div>
+<div class="sec-h">STATEMENTS</div>
+<div class="card" style="padding:0">
+<table id="pdfStatements">
+<thead>
+<tr>
+<th class="st-no">NO.</th>
+<th>STATEMENT</th>
+<th class="st-group">GROUP</th>
+<th class="st-rating">RATING</th>
+</tr>
+</thead>
+<tbody>
+<!-- rows injected -->
+</tbody>
+</table>
+</div>
 </section>
-
 <script>
 (function(){
   const S = {answers:{}, questions:[], groups:[]}; window.__S = S;
