--- a/index.html
+++ b/index.html
@@ -192,11 +192,7 @@
     .st-title{font-weight:800}
   }
 
-  .rec-text{
-    font-size:14pt;
-    font-weight:500;
-    color:#333;
-  }
+  .rec-text{font-size:16pt; font-weight:600; color:#333; margin-top:16px;}
 </style>
 <script id="embeddedQuestions" type="application/json">[]</script>
 </head>
