--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   .pill.selected{background:var(--blue); color:#fff}
 
   /* SCORE */
-  .score-kicker{font-size:16pt; font-weight:600; color:#333; margin:12px 0 8px 0}
+  .score-kicker{font-size:10pt; font-weight:400; color:#999999; margin:12px 0 8px 0}
   .score-big{font-size:20pt; font-weight:900; color:#444; margin:0 0 24px 0}
   .gauge{position:relative; height:28px; border-radius:999px; background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
   .gauge::after{content:""; position:absolute; top:-8px; bottom:-8px; width:10px; border-radius:6px; background:#444}
@@ -192,16 +192,13 @@
     .st-title{font-weight:800}
   }
 
-  .rec-text{font-size:16pt; font-weight:400; color:#333; margin-top:16px;}
+  .rec-text{font-size:16pt; font-weight:800; color:#333; margin-top:16px;}
 
-  .group-results-header{
-    font-size:14pt;
-    font-weight:500;
-    color:#444;
-    margin-bottom:8px;
-  }
+  .group-results-header{font-size:15pt; font-weight:700; color:#444; margin-bottom:8px;}
 
-  .rec-kicker{font-size:16pt; font-weight:600; color:#333; margin:12px 0 8px 0}
+  .rec-kicker{font-size:10pt; font-weight:400; color:#999999; margin:12px 0 8px 0}
+
+  .group-desc{line-height:1.4;}
 </style>
 <script id="embeddedQuestions" type="application/json">[]</script>
 </head>
