--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     .st-title{font-weight:800}
   }
 
-  .rec-text{font-size:16pt; font-weight:800; color:#333; margin-top:16px;}
+  .rec-text{font-size:15pt; font-weight:600; color:#333; margin-top:16px;}
 
   .group-results-header{font-size:15pt; font-weight:700; color:#444; margin-bottom:8px;}
 
@@ -527,10 +527,10 @@
     if(!markerStyle){ markerStyle=document.createElement('style'); markerStyle.id='markerStyle'; document.head.appendChild(markerStyle);}
     markerStyle.textContent = '.gauge::after{left: calc(var(--marker) - 5px);}';
     let rec=''; 
-    if(totals.pct<50) rec='Keep practicing!\\nFocus on one habit at a time.'; 
-    else if(totals.pct<70) rec='Good effort!\\nPick two areas to improve next.'; 
-    else if(totals.pct<85) rec='Great hospitality!\\nKeep challenging yourself'; 
-    else rec='Excellent!\\nBe a coach for your peers';
+    if(totals.pct<50) rec='You are behind and may need more support. Please contact your coach and ask your team members for guidance'; 
+else if(totals.pct<70) rec='Focus on self-development. Constant practice will make you better. Ask feedback from friends so you know you improve'; 
+else if(totals.pct<85) rec='Great hospitality! Keep challenging yourself and help others by giving them honest and positive feedback'; 
+else rec='Excellent! Your understanding of BED is an inspiration for others. Continue to lead others by example';
     document.getElementById('recText').textContent = rec;
     renderGroupResults();
     show('finish');
