--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   select:invalid{color:#aaa}
 
   .actions{padding-left:calc(var(--label-w) + var(--gap)); margin-top:14px; display:flex; gap:10px; justify-content:flex-end}
-  button{padding:14px 24px; border:none; border-radius:14px; background:var(--blue); color:#fff; font-size:14pt; cursor:pointer}
-  .btn-secondary{background:#fff; color:#111; border:1px solid #e5e7eb}
+  button{width:140px; height:48px; font-size:13pt; border:none; border-radius:14px; background:var(--blue); color:#fff; cursor:pointer; text-align:center;}
+  .btn-secondary{width:140px; height:48px; font-size:13pt;}
 
   /* QUESTIONS */
   .q-item{padding:12px 0; border-top:1px solid #e5e7eb; display:grid; grid-template-columns: 26px 1fr; column-gap:6px; align-items:baseline}
@@ -198,7 +198,7 @@
 
   .rec-kicker{font-size:10pt; font-weight:400; color:#999999; margin:12px 0 8px 0}
 
-  .group-desc{line-height:1.3; margin-bottom:18px;}
+  .group-desc{line-height:1.3; margin-top:2px; margin-bottom:20px;}
 
   .score-section{margin-top:40px;}
 
