--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   .btn-secondary{width:120px; height:42px; font-size:12pt;}
 
   /* QUESTIONS */
-  .q-item{padding:12px 0; border-top:1px solid #e5e7eb; display:grid; grid-template-columns: 26px 1fr; column-gap:6px; align-items:baseline}
+  .q-item{padding:12px 0;  display:grid; grid-template-columns: 26px 1fr; column-gap:6px; align-items:baseline}
   .q-num{
   font-size:11pt;
   font-weight:500;       /* medium weight */
@@ -202,11 +202,11 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
 
   .rec-kicker{font-size:10pt; font-weight:400; color:#999999; margin:12px 0 8px 0}
 
-  .group-desc{line-height:1.35; margin-top:2px; margin-bottom:20px; color:#666; font-size:.95em;}
+  .group-desc{line-height:1.35; margin-top:2px; margin-bottom:14px; color:#666; font-size:.95em;}
 
   .score-section{margin-top:40px;}
 
-  .group-row{padding:4px 0; border-top:1px solid #eee; margin-bottom:0;}
+  .group-row{padding:2px 0; margin-bottom:0;}
 </style>
 <script id="embeddedQuestions" type="application/json">[]</script>
 </head>
