--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   .actions{padding-left:calc(var(--label-w) + var(--gap)); margin-top:14px; display:flex; gap:10px; justify-content:flex-end}
   button{width:120px; height:42px; font-size:12pt; border:none; border-radius:14px; text-align:center;}
 button:enabled{background:var(--blue); color:#fff; cursor:pointer;}
+button:disabled{background:#d0e6f9; color:#666; cursor:not-allowed;}
+button:enabled{background:var(--blue); color:#fff; cursor:pointer;}
 button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
 button:enabled{background:var(--blue); color:#fff; cursor:pointer;}
 button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
@@ -415,6 +417,10 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   }
   setProgress(1);
 
+  try { if (el('toQ2')) el('toQ2').disabled = true; } catch(_){}
+  try { if (el('submitAll')) el('submitAll').disabled = true; } catch(_){}
+
+
   function stripLeadingNumber(t){ return String(t||'').replace(/^\\s*\\d+\\.\\s*/, ''); }
 
   function makeQ(q, ord){
@@ -464,7 +470,32 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   }
 
   function computeGroupPercents(){
-    const byGroup = {};
+    const byGroup = {}
+  // === Global page validation for Q1 / Q2 ===
+  function answeredCount(ids){
+    return ids.filter(id => S.answers[id] != null && S.answers[id] !== '' && !isNaN(parseInt(S.answers[id],10))).length;
+  }
+  function qIds(rangeStart, rangeEnd){
+    // returns question ids for the given slice [start, endInclusive]
+    const arr = (S.questions||[]).slice(rangeStart, rangeEnd+1).map(q=>q.id);
+    return arr;
+  }
+  function updateQ1Button(){
+    const ids = qIds(0, Math.min(17, (S.questions||[]).length-1));
+    const done = answeredCount(ids) === ids.length && ids.length>0;
+    const btn = el('toQ2');
+    if(btn) btn.disabled = !done;
+  }
+  function updateQ2Button(){
+    const start = 18;
+    const end = Math.min(34, (S.questions||[]).length-1);
+    const ids = qIds(start, end);
+    const done = answeredCount(ids) === ids.length && ids.length>0;
+    const btn = el('submitAll');
+    if(btn) btn.disabled = !done;
+  }
+
+;
     (S.groups||[]).forEach(g=>byGroup[g.name]=[]);
     (S.questions||[]).forEach(q=>{
       const g = q.group;
@@ -516,9 +547,9 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
     _eligCancelBtn.onclick = () => { closeModal(); _eligOkBtn.onclick = oldOk; _eligCancelBtn.onclick = oldCancel; };
   };
   el('backToWelcome').onclick = () => show('welcome');
-  el('toQ1').onclick = () => { const l=el('list-q1'); l.innerHTML=''; (S.questions||[]).slice(0,18).forEach((q,i)=>l.appendChild(makeQ(q,i+1))); show('q1'); };
+  el('toQ1').onclick = () => {  const l=el('list-q1'); l.innerHTML=''; (S.questions||[]).slice(0,18).forEach((q,i)=>l.appendChild(makeQ(q,i+1)));  show('q1'); try{ el('toQ2').disabled = true; updateQ1Button(); }catch(_){} };
   el('backToInstructions').onclick = () => show('instructions');
-  el('toQ2').onclick = () => { const l=el('list-q2'); l.innerHTML=''; (S.questions||[]).slice(18,35).forEach((q,i)=>l.appendChild(makeQ(q,19+i))); show('q2'); };
+  el('toQ2').onclick = () => {  const l=el('list-q2'); l.innerHTML=''; (S.questions||[]).slice(18,35).forEach((q,i)=>l.appendChild(makeQ(q,19+i)));  show('q2'); try{ el('submitAll').disabled = true; updateQ2Button(); }catch(_){} };
   el('backToQ1').onclick = () => show('q1');
 
   el('submitAll').onclick = () => {
